--- a/.github/workflows/security-scan.yml
+++ b/.github/workflows/security-scan.yml
@@ -90,20 +90,28 @@ jobs:
         run: mvn -B -f butterfly-common/pom.xml install -DskipTests
 
       - name: Run OWASP Dependency Check
+        # Sprint C: Fail on CVSS >= 7 (High severity and above)
         run: |
           mvn -B -f ${{ matrix.module }}/pom.xml \
             org.owasp:dependency-check-maven:check \
-            -DfailBuildOnCVSS=9 \
+            -DfailBuildOnCVSS=7 \
             -DsuppressionFiles=.github/dependency-check-suppressions.xml \
-            || true
+            -Dformat=ALL
 
-      - name: Upload Dependency Check Report
+      - name: Upload Dependency Check Report (HTML)
         uses: actions/upload-artifact@v4
         if: always()
         with:
           name: dependency-check-${{ matrix.module }}
           path: ${{ matrix.module }}/target/dependency-check-report.html
           retention-days: 30
+
+      - name: Upload Dependency Check SARIF
+        uses: github/codeql-action/upload-sarif@v3
+        if: always()
+        with:
+          sarif_file: ${{ matrix.module }}/target/dependency-check-report.sarif
+          category: "dependency-check-${{ matrix.module }}"
 
   # Secret Scanning
   secret-scan:
@@ -178,6 +186,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Run Semgrep
+        # Sprint C: Remove || true to fail on security findings
         run: |
           semgrep scan \
             --config auto \
@@ -185,8 +194,7 @@ jobs:
             --config p/security-audit \
             --config p/secrets \
             --sarif --output results.sarif \
-            --error \
-            || true
+            --error
 
       - name: Upload SARIF results
         uses: github/codeql-action/upload-sarif@v3
