--- a/package.json
+++ b/package.json
@@ -7,14 +7,18 @@
     "prepare": "husky",
     "lint:java": "echo 'Java linting runs via Maven checkstyle'",
     "lint:portal": "npm --prefix PERCEPTION/perception-portal run lint",
+    "lint:docs": "find docs -name '*.md' -exec npx markdown-link-check {} --config .markdown-link-check.json \\;",
+    "lint:docs:semantic": "python scripts/lint-docs.py",
     "test:portal": "npm --prefix PERCEPTION/perception-portal run test",
-    "build:common": "mvn -f butterfly-common/pom.xml install -DskipTests"
+    "build:common": "mvn -f butterfly-common/pom.xml install -DskipTests",
+    "security:check": "scripts/security/check-secure-config.sh"
   },
   "devDependencies": {
     "@commitlint/cli": "^19.6.1",
     "@commitlint/config-conventional": "^19.6.0",
     "husky": "^9.1.7",
-    "lint-staged": "^15.4.3"
+    "lint-staged": "^15.4.3",
+    "markdown-link-check": "^3.12.2"
   },
   "engines": {
     "node": ">=20.0.0"
@@ -25,4 +29,3 @@
   },
   "license": "UNLICENSED"
 }
-
