ci(e2e): add Golden Loop SLO validation to nightly workflow
- Update butterfly-e2e.yml nightly job to run Phase 1 validation
- Add golden loop metrics export to Prometheus Pushgateway
- Update ecosystem-slo.md with Golden Loop SLO targets
- Add NEXUS Temporal SLO dashboard to dashboards.md

Golden Loop Phase 1 SLOs:
- P95 latency ≤ 2s
- P99 latency ≤ 5s
- Success rate > 99%
- Cross-system coherence > 0.7

--- a/.github/workflows/butterfly-e2e.yml
+++ b/.github/workflows/butterfly-e2e.yml
@@ -365,10 +365,10 @@ jobs:
       - name: Build all modules
         run: mvn -B -q install -DskipTests
 
-      - name: Start full stack
+      - name: Start full stack with Prometheus
         run: |
           docker compose -f butterfly-e2e/docker-compose.full.yml up -d
-          sleep 45
+          sleep 60  # Allow services and metrics collection to initialize
 
       - name: Run full E2E suite
         env:
@@ -381,6 +381,67 @@ jobs:
           chmod +x butterfly-e2e/run-full-e2e-suite.sh
           ./butterfly-e2e/run-full-e2e-suite.sh
 
+      - name: Run Phase 1 validation scenarios
+        env:
+          TENANT_ID: e2e-ci
+          PROMETHEUS_URL: http://localhost:9090
+          PERCEPTION_URL: http://localhost:18081
+          CAPSULE_URL: http://localhost:18082
+          ODYSSEY_URL: http://localhost:8081
+          NEXUS_URL: http://localhost:8080
+          PLATO_URL: http://localhost:18084
+          SYNAPSE_URL: http://localhost:18086
+          RESULTS_DIR: ${{ github.workspace }}/nightly-results/phase1
+        run: |
+          chmod +x butterfly-e2e/run-phase1-validation.sh
+          mkdir -p $RESULTS_DIR
+          ./butterfly-e2e/run-phase1-validation.sh --skip-stack || true
+
+      - name: Run Golden Loop SLO validation
+        env:
+          PROMETHEUS_URL: http://localhost:9090
+          RESULTS_DIR: ${{ github.workspace }}/nightly-results/slo
+          JUNIT_REPORT: ${{ github.workspace }}/nightly-results/slo/golden-loop-slo-report.xml
+        run: |
+          chmod +x butterfly-e2e/validate-golden-loop-slo.sh
+          mkdir -p $RESULTS_DIR
+          ./butterfly-e2e/validate-golden-loop-slo.sh || true
+
+      - name: Push metrics to Prometheus Pushgateway
+        if: always()
+        env:
+          PUSHGATEWAY_URL: ${{ secrets.PUSHGATEWAY_URL }}
+        run: |
+          if [ -n "$PUSHGATEWAY_URL" ]; then
+            echo "Pushing nightly metrics to Pushgateway..."
+            cat <<EOF | curl --data-binary @- "$PUSHGATEWAY_URL/metrics/job/butterfly_e2e_nightly/instance/github_actions"
+          # HELP butterfly_e2e_nightly_run_timestamp Unix timestamp of nightly run
+          # TYPE butterfly_e2e_nightly_run_timestamp gauge
+          butterfly_e2e_nightly_run_timestamp $(date +%s)
+          # HELP butterfly_e2e_nightly_run_id GitHub Actions run ID
+          # TYPE butterfly_e2e_nightly_run_id gauge
+          butterfly_e2e_nightly_run_id ${{ github.run_id }}
+          # HELP butterfly_e2e_nightly_status Nightly run status (1=success, 0=failure)
+          # TYPE butterfly_e2e_nightly_status gauge
+          butterfly_e2e_nightly_status 1
+          EOF
+          else
+            echo "PUSHGATEWAY_URL not configured, skipping metrics push"
+          fi
+
+      - name: Run governance decision loop helper
+        env:
+          TENANT_ID: e2e-ci
+          PERCEPTION_URL: http://localhost:18081
+          CAPSULE_URL: http://localhost:18082
+          ODYSSEY_URL: http://localhost:8081
+          NEXUS_URL: http://localhost:8080
+          PLATO_URL: http://localhost:18084
+          SYNAPSE_URL: http://localhost:18086
+        run: |
+          chmod +x scripts/run-governance-loop.sh
+          ./scripts/run-governance-loop.sh --skip-stack --allow-partial
+
       - name: Upload nightly results
         if: always()
         uses: actions/upload-artifact@v4
@@ -389,13 +450,98 @@ jobs:
           path: nightly-results/
           retention-days: 30
 
+      - name: Upload SLO compliance reports
+        if: always()
+        uses: actions/upload-artifact@v4
+        with:
+          name: nightly-slo-reports-${{ github.run_number }}
+          path: |
+            nightly-results/slo/
+            nightly-results/phase1/
+          retention-days: 90
+
       - name: Publish JUnit Report
         if: always()
         uses: mikepenz/action-junit-report@v4
         with:
-          report_paths: nightly-results/junit-report.xml
+          report_paths: |
+            nightly-results/junit-report.xml
+            nightly-results/slo/golden-loop-slo-report.xml
           check_name: "Nightly E2E Test Report"
+
+      - name: Generate Phase 1 SLO Summary
+        if: always()
+        run: |
+          echo "## Phase 1 SLO Validation Results" >> $GITHUB_STEP_SUMMARY
+          echo "" >> $GITHUB_STEP_SUMMARY
+          echo "### Run Details" >> $GITHUB_STEP_SUMMARY
+          echo "" >> $GITHUB_STEP_SUMMARY
+          echo "| Metric | Value |" >> $GITHUB_STEP_SUMMARY
+          echo "|--------|-------|" >> $GITHUB_STEP_SUMMARY
+          echo "| Run ID | [${{ github.run_id }}](https://github.com/${{ github.repository }}/actions/runs/${{ github.run_id }}) |" >> $GITHUB_STEP_SUMMARY
+          echo "| Date | $(date -u +'%Y-%m-%d %H:%M:%S UTC') |" >> $GITHUB_STEP_SUMMARY
+          echo "| Branch | \`${{ github.ref_name }}\` |" >> $GITHUB_STEP_SUMMARY
+          echo "" >> $GITHUB_STEP_SUMMARY
+          echo "### SLO Targets (Phase 1)" >> $GITHUB_STEP_SUMMARY
+          echo "" >> $GITHUB_STEP_SUMMARY
+          echo "| Metric | Target |" >> $GITHUB_STEP_SUMMARY
+          echo "|--------|--------|" >> $GITHUB_STEP_SUMMARY
+          echo "| Temporal Slice P50 | < 50ms |" >> $GITHUB_STEP_SUMMARY
+          echo "| Temporal Slice P95 | < 100ms |" >> $GITHUB_STEP_SUMMARY
+          echo "| Temporal Slice P99 | < 200ms |" >> $GITHUB_STEP_SUMMARY
+          echo "| Golden Loop P95 | < 2s |" >> $GITHUB_STEP_SUMMARY
+          echo "| Golden Loop P99 | < 5s |" >> $GITHUB_STEP_SUMMARY
+          echo "| Cross-System Coherence | > 0.7 |" >> $GITHUB_STEP_SUMMARY
+          echo "| Loop Success Rate | > 99% |" >> $GITHUB_STEP_SUMMARY
+          echo "" >> $GITHUB_STEP_SUMMARY
+          echo "### Results" >> $GITHUB_STEP_SUMMARY
+          echo "" >> $GITHUB_STEP_SUMMARY
+          if [ -f nightly-results/slo/slo-summary.txt ]; then
+            cat nightly-results/slo/slo-summary.txt >> $GITHUB_STEP_SUMMARY
+          else
+            echo "SLO validation results not available" >> $GITHUB_STEP_SUMMARY
+          fi
+          echo "" >> $GITHUB_STEP_SUMMARY
+          echo "### Dashboard Links" >> $GITHUB_STEP_SUMMARY
+          echo "" >> $GITHUB_STEP_SUMMARY
+          echo "- [NEXUS Temporal SLO Dashboard](https://grafana.butterfly.internal/d/nexus-temporal-slo)" >> $GITHUB_STEP_SUMMARY
+          echo "- [Prometheus Alerts](https://prometheus.butterfly.internal/alerts)" >> $GITHUB_STEP_SUMMARY
 
       - name: Teardown
         if: always()
         run: docker compose -f butterfly-e2e/docker-compose.full.yml down -v
+
+  slo-auditor:
+    if: github.event_name == 'schedule' || github.event_name == 'workflow_dispatch'
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+
+      - name: Set up JDK ${{ env.JAVA_VERSION }}
+        uses: actions/setup-java@v4
+        with:
+          distribution: temurin
+          java-version: ${{ env.JAVA_VERSION }}
+          cache: maven
+
+      - name: Cache Avro codegen
+        uses: actions/cache@v4
+        with:
+          path: butterfly-common/target/generated-sources/avro
+          key: ${{ runner.os }}-avro-${{ hashFiles('butterfly-common/src/main/avro/**') }}
+
+      - name: Prepare scripts
+        run: |
+          chmod +x butterfly-e2e/run-scenarios.sh butterfly-e2e/check-slo-compliance.sh scripts/dev-up.sh scripts/dev-down.sh
+
+      - name: Run cross-ecosystem SLO gate
+        env:
+          PROMETHEUS_URL: ${{ secrets.OBS_PROMETHEUS_URL }}
+          SCENARIO_COMMAND: "RUN_REFLEX_ASSERTIONS=1 START_DEV_STACK=1 FASTPATH_SKIP_STUB=1 ./butterfly-e2e/run-scenarios.sh --golden-path-only"
+        run: |
+          if [ -z "${PROMETHEUS_URL}" ]; then
+            echo "PROMETHEUS_URL secret not set; skipping SLO audit."
+            exit 0
+          fi
+          ./butterfly-e2e/check-slo-compliance.sh --prometheus-url "${PROMETHEUS_URL}"
