--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,12 @@ CAPSULE/
 ODYSSEY/
 butterfly-common/
 butterfly-nexus/
-butterfly-e2e/
+
+# E2E test results and artifacts (scripts are tracked)
+butterfly-e2e/resilience-results/
+butterfly-e2e/results/
+butterfly-e2e/*.log
+butterfly-e2e/.env
 
 # Build artifacts
 target/
