feat: add security connector credentials and integration test utilities
Security:
- Add ConnectorCredentialProvider for secure credential rotation
- Add ConnectorCredentials record for typed credential access
- Add unit tests for ConnectorCredentialProvider
- Update SecretProvider and VaultSecretProvider interfaces

Testing:
- Add AbstractControllerIntegrationTest base class
- Add testing-quickstart.md guide
- Rename PerceptionApiContractTest for consistency

Documentation:
- Add API client snippets (curl, java, python, typescript)
- Add RIM/CAPSULE monitoring dashboards
- Add rim-capsule-alerts.yml for operational monitoring

Scripts:
- Update scaffold.sh

--- a/butterfly-testing/pom.xml
+++ b/butterfly-testing/pom.xml
@@ -39,6 +39,13 @@
             <optional>true</optional>
         </dependency>
 
+        <!-- Spring Security Test (for SecurityMockMvcRequestPostProcessors) -->
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-test</artifactId>
+            <scope>compile</scope>
+        </dependency>
+
         <!-- Spring Kafka Test -->
         <dependency>
             <groupId>org.springframework.kafka</groupId>
